create component fruit and employee

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -388,7 +388,10 @@
 
   <!-- Next Steps -->
   <h2>Next Steps</h2>
-  <p>What do you want to do next with your app?</p>
+  <p>GCANASAC</p>
+
+  <fruta></fruta>
+  <empleado></empleado>
 
   <input type="hidden" #selection>
 
