--- a/src/app/fruta/fruta.component.html
+++ b/src/app/fruta/fruta.component.html
@@ -1,4 +1,4 @@
-Plantilla en fichero en HTML
+<!-- Plantilla en fichero en HTML -->
 <h1>{{nombre_componente}}</h1>
 <p>{{listado_frutas}}</p>
-<empleado></empleado>
+<!-- <empleado></empleado> -->
