--- a/src/app/empleado/empleado.component.html
+++ b/src/app/empleado/empleado.component.html
@@ -51,3 +51,13 @@
   }">Es de color amarillo</li>
 </ul>
 
+<h3>Selector de Colores:</h3>
+<input type="text" [(ngModel)] = 'colorSeleccionado' />
+<pre>{{colorSeleccionado}}</pre>
+<div [ngStyle]="{
+  'background': colorSeleccionado,
+  'width': '200px',
+  'height': '200px',
+  'float': 'right',
+  'margin-left': '50%'
+}"></div>
