--- a/src/app/empleado/empleado.component.html
+++ b/src/app/empleado/empleado.component.html
@@ -53,7 +53,19 @@
 
 <h3>Selector de Colores:</h3>
 <input type="text" [(ngModel)] = 'colorSeleccionado' />
-<pre>{{colorSeleccionado}}</pre>
+<pre [style.border]="colorSeleccionado == 'red' ? '5px solid black':'1px solid blue'"
+     [class.fondoAzul]="colorSeleccionado == 'blue'"
+     [ngClass]="{
+        fondoAzul: colorSeleccionado == 'blue',
+        fondoRojo: colorSeleccionado == 'red',
+        fondoAmarillo: colorSeleccionado == 'yellow',
+        letraGrande: 1 == 1
+     }"
+>
+  <strong>Color elegido</strong>
+  {{colorSeleccionado}}
+</pre>
+
 <div [ngStyle]="{
   'background': colorSeleccionado,
   'width': '200px',
