--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -390,8 +390,10 @@
   <h2>Next Steps</h2>
   <p>GCANASAC</p>
 
-  <fruta></fruta>
-  <empleado></empleado>
+  <!-- <fruta></fruta>
+  <empleado></empleado> -->
+
+  <router-outlet></router-outlet>
 
   <input type="hidden" #selection>
 
