--- a/src/app/fruta/fruta.component.html
+++ b/src/app/fruta/fruta.component.html
@@ -1,4 +1,15 @@
 <!-- Plantilla en fichero en HTML -->
 <h1>{{nombre_componente}}</h1>
 <p>{{listado_frutas}}</p>
+
+<div *ngIf="parametro">
+  Parametro de la url: {{parametro}}
+</div>
+
+<div *ngIf="!parametro">
+  <button (click)="redirectTo()">
+    Ir a Home
+  </button>
+
+</div>
 <!-- <empleado></empleado> -->
