--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,20 @@
 <h3>{{titulo}}</h3>
+{{fecha| date: 'dd/MM/yyyy'}}
+<br>
+<br>
+
+{{5 | conversor: 7}}
+
+<br>
+<br>
+
+<input type="text" [(ngModel)]="ropa">
+<button (click)="agregarPrenda()">Agregar prenda</button>
+<span *ngIf="ropa">La prenda a guardar es: {{ropa| uppercase}}</span>
+<h4>Listado de prendas de Ropa</h4>
+<ul>
+  <li *ngFor="let ropa of listadoRopa let i = index">
+    {{ropa| lowercase}}
+    <button (click)="eliminarPrenda(i)">Borrar</button>
+  </li>
+</ul>
