--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,9 +16,9 @@
   />
   <span>Welcome</span>
     <div class="spacer"></div>
-    <a routerLink="/empleado">Empleado Component</a>
-    <!-- <a routerLink="/empleado" routerLinkActive="active" ariaCurrentWhenActive="page">Empleado Component</a> -->
-    <a routerLink="/fruta" routerLinkActive="active" ariaCurrentWhenActive="page">Fruta Component</a>
+    <a routerLink="/empleado"  routerLinkActive="active" >Empleado Component </a>
+    <a routerLink="/coches" routerLinkActive="active" ariaCurrentWhenActive="page">Coches Component </a>
+    <a routerLink="/fruta" routerLinkActive="active" ariaCurrentWhenActive="page">Fruta Component </a>
     <a aria-label="Angular on twitter" target="_blank" rel="noopener" href="https://twitter.com/angular" title="Twitter">
       <svg id="twitter-logo" height="24" data-name="Logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 400 400">
         <rect width="400" height="400" fill="none"/>
