--- a/src/app/plantillas/plantillas.component.html
+++ b/src/app/plantillas/plantillas.component.html
@@ -30,7 +30,7 @@
 >
 </hijo>
 <div *ngIf="datosDelHijo.nombre">
-  <h3>Datos del componente Hijo</h3>
+  <h3 [style.background] = "color">Datos del componente Hijo</h3>
   <h4>{{datosDelHijo.nombre}}</h4>
   <h4>{{datosDelHijo.edad}}</h4>
 </div>
